--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "fdir": "^6.4.4",
     "fluent-ffmpeg": "^2.1.3",
     "next": "15.1.8",
     "react": "^19.0.0",
