--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.817.0",
+    "@prisma/client": "^6.8.2",
+    "@types/pg": "^8.15.2",
     "fdir": "^6.4.4",
     "fluent-ffmpeg": "^2.1.3",
     "next": "15.1.8",
+    "pg": "^8.16.0",
+    "prisma": "^6.8.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
