--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
     "@prisma/client": "^6.8.2",
+    "@types/jszip": "^3.4.0",
     "@types/pg": "^8.15.2",
     "fdir": "^6.4.4",
     "fluent-ffmpeg": "^2.1.3",
+    "jszip": "^3.10.1",
     "next": "15.1.8",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
